bdr.BDR.scala.error
Erreur de compilation :
BDR:3: error: identifier expected but string literal found.
  if (litMessage():"R"){
                   ^BDR:31: error: ')' expected but '}' found.
} 
^